NLP TP's/texts/robotics/robotics.stackexchange_0000097865.txt
Q:

compilation error master branch navigation2

ROS Foxy, Ubuntu 20.04
I am failing to successfully compile the source code of Navigation2 master branch.
The following errors are reported:
/home/user/code/nav2_ws/src/navigation2/nav2_util/include/nav2_util/lifecycle_node.hpp:25:10: fatal error: bondcpp/bond.hpp: No such file or directory
   25 | #include "bondcpp/bond.hpp"
      |          ^~~~~~~~~~~~~~~~~~

I have tried downloading and compiling ros2 branch of bond_core. But it also results in compilation error:
/home/user/code/nav2_ws/src/bond_core-ros2/bondcpp/src/bond.cpp:188:43: error: ‘from_nanoseconds’ is not a member of ‘rclcpp::Duration’
  188 |   rclcpp::Duration dur1(rclcpp::Duration::from_nanoseconds(connect_timeout_));

It appear that I am combining incompatible versions of the navigation2 stack with bond_core. Please share the correct configuration of nav2 library and dependencies.
Thanks a lot.

Originally posted by prince on ROS Answers with karma: 660 on 2020-12-17
Post score: 1

A:

You must work with ROS2 master or rolling to use Nav2 main branch. Sometimes it will be compatible with released distributions, but rclcpp has changed too much from Foxy to support it on our master branch anymore.

Originally posted by stevemacenski with karma: 8272 on 2020-12-17
This answer was ACCEPTED on the original site
Post score: 0

